# pairmeet_services

./: .gitignore  CMakeLists.txt  CMakePresets.json  architecture_planning.md  pairmeet.code-workspace  readme.md  sample_pairmeet_query.sql
installers/: boost.sh  brotli.sh  drogon.sh  jsoncpp.sh  jwt.sh  mailio.sh  mysql_conn.sh  nlohmann_json.sh  openssl.sh  spdlog.sh  zlib.sh  zstd.sh
src/: main.cpp
